# omni-ai

./: .env  Dockerfile  README.md  chat_gui.py  chat_run.py  docker-compose.yml  ideas.md  install.sh  kill.sh  publish.sh  pyproject.toml  requirements.txt  run.sh  runner.py
aichatlite/: app.py  gradioapp.py  main.py  mainstyles.py  server_main.py
aichatlite/base/: state.py
aichatlite/components/: chat_interface.py  model_settings.py  styles.py
aichatlite/config/: app_config.py  constants.py
aichatlite/core/: const.py  core.py  dark_streamlit_css.py  omni_mixin.py  streamlit_app.py  streamlit_css.py
aichatlite/core/agents/: compression_agent.py  regenearate_query_agent.py  tree_of_thought_agent.py
aichatlite/core/features/: feature_main.py  handle_google_searchai.py  handle_search_ai.py
aichatlite/core/tools/: __init__.py  _arxiv.py  _bing.py  _github.py  _google.py  _wikipedia.py  _youtube.py  base.py  vison_wiki.py
aichatlite/core/utils/: const.py  prompt_names_fetcher.py
aichatlite/services/: chat_service.py  model_service.py
aichatlite/utils/: constants.py  embed.py  prompt_names_fetcher.py  schema.py
aichatlite_web/core/: baseprompt.py
aichatlite_web/core/features/: __init__.py  feature_main.py  handle_pdf.py
setup_sh_files/: install_prerequisites.sh  omni-ai.desktop
src/: app.py
src/core/: base.py  const.py  omni_mixin.py  streamlit_app.py  streamlit_css.py
src/core/features/: handle_pdf.py
src/main/: base.py  config.ini  const.py  omni_ai.py  omni_mixin.py  prompts.py  streamlit_app.py  streamlit_css.py
src/main/backend/: main.py  omni_ai.py  stream_test.py  streamlit_app.py  streamlit_v2.py
src/main/features/: __init__.py  feature_main.py  handle_ai_research.py  handle_google_searchai.py  handle_pdf.py
src/main/frontend/: package-lock.json  package.json
test/: tools_test.py
tests/: main.py
(+7 files in other folders)
