[tool.poetry]
name = "aichatlite-web"
version = "0.0.10"
description = "claude chat"
authors = ["Kammari Santhosh"]
readme = "README.md"
license = "MIT License"
repository = "https://github.cov0m/username/sa"
keywords = ["claude","claude_chat"]
packages = [
    {include = "aichatlite_web"}
]
include = [
    "chat_gui.py",
    "chat_run.py"
]


[tool.poetry.dependencies]
python = "^3.10"
streamlit="^1.40.2"
ailitellm="^0.1.3"

[tool.poetry.scripts]
claude-web = "chat_gui:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"