[tool.poetry]
name = "aichatlite"
version = "0.2.9"
description = "claude chat"
authors = ["Kammari Santhosh"]
readme = "README.md"
license = "MIT License"
repository = "https://github.com/username/sa"
keywords = ["claude","claude_chat"]
packages = [
    {include = "aichatlite"}
]
include = [
    "chat_gui.py",
    "chat_run.py"
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit="^1.40.2"
ailitellm="^0.1.6"
aipromptlite="^0.1.13"

[tool.poetry.scripts]
claude-chat = "chat_gui:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"